bad/void_return_in_func_returning_int.example_compiler_output
ERROR
[1mbad/void_return_in_func_returning_int.lat:2:14: [1;31merror: [0;1mnon-void function should return a value[m
int test() { return; }
             [1;32m^[m
[1mbad/void_return_in_func_returning_int.lat:2:1: [1;34mnote: [0;1mfunction return type is declared here[m
int test() { return; }
[1;32m^[m
